--- a/_projects/0001-10-10-Научиться-учиться.md
+++ b/_projects/0001-10-10-Научиться-учиться.md
@@ -1,13 +1,18 @@
 ---
 position: left
+image-link: /background/projects-sections/to-learn-to-learn/two_again.png
+link-to-site: https://alexeynewdeveloper.github.io/gh-pages-how_to_learn/index.html
+link-to-repo: https://github.com/AlexeyNewDeveloper/gh-pages-how_to_learn/tree/main
 ---
 
-Давно выяснено, что при оценке дизайна и композиции читаемый текст
-мешает сосредоточиться. Lorem Ipsum используют потому, что тот
-обеспечивает более или менее стандартное заполнение шаблона, а
-также реальное распределение букв и пробелов в абзацах, которое не
-получается при простой дубликации "Здесь ваш текст.. Здесь ваш
-текст.. Здесь ваш текст.." Многие программы электронной вёрстки и
-редакторы HTML используют Lorem Ipsum в качестве текста по
-умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу
-показывает
+Лендинг, который содержит информацию о том как правильно обучатся.
+Различные техники запоминания, а также заряд мотивации и несколько видео с youtube канала Ted.
+
+В проекте использованы технологии:
+
+1. HTML
+2. CSS
+
+Старался все делать в рамках BEM.
+Сайт представляет собой лендинг, который содержит информацию о том, как лучше учится, какие техники использовать для запоминания.
+Также есть два встроенных видео с youtube-канала TED.
