--- a/_projects/0002-10-10-Путешествия-по-России.md
+++ b/_projects/0002-10-10-Путешествия-по-России.md
@@ -1,5 +1,8 @@
 ---
 position: right
+image-link: /background/projects-sections/travel-in-russia/travel-in-russia-background.png
+link-to-site: https://alexeynewdeveloper.github.io/gh-pages-russian-travel/index.html
+link-to-repo: https://github.com/AlexeyNewDeveloper/russian-travel
 ---
 
 Давно выяснено, что при оценке дизайна и композиции читаемый текст
