--- a/_projects/0003-10-10-Место.md
+++ b/_projects/0003-10-10-Место.md
@@ -1,5 +1,8 @@
 ---
 position: left
+image-link: /background/projects-sections/mesto/mesto.png
+link-to-site: https://alexeynewdeveloper.github.io/gh-pages-mesto/index.html
+link-to-repo: https://github.com/AlexeyNewDeveloper/gh-pages-mesto
 ---
 
 Давно выяснено, что при оценке дизайна и композиции читаемый текст
