--- a/_projects/0003-10-10-Место.md
+++ b/_projects/0003-10-10-Место.md
@@ -5,12 +5,14 @@ link-to-site: https://alexeynewdeveloper.github.io/gh-pages-mesto/index.html
 link-to-repo: https://github.com/AlexeyNewDeveloper/gh-pages-mesto
 ---
 
-Давно выяснено, что при оценке дизайна и композиции читаемый текст
-мешает сосредоточиться. Lorem Ipsum используют потому, что тот
-обеспечивает более или менее стандартное заполнение шаблона, а
-также реальное распределение букв и пробелов в абзацах, которое не
-получается при простой дубликации "Здесь ваш текст.. Здесь ваш
-текст.. Здесь ваш текст.." Многие программы электронной вёрстки и
-редакторы HTML используют Lorem Ipsum в качестве текста по
-умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу
-показывает
+Почти социальная галерея, которая поможет людям делится своими воспоминаниями о каких-либо местах. Делится эмоциями через фотографии.
+
+В проекте использованы технологии:
+
+1. HTML
+2. CSS
+3. BEM
+4. Git
+5. JavaScript
+
+Адаптивный сайт с возможностью просмотра изображений из альбома, редактирования профиля, добавления фото и описания. Есть возможность оценивать лайками и видеть самые популярные места. Удалять можно только свои места.
