--- a/_projects/0002-10-10-Путешествия-по-России.md
+++ b/_projects/0002-10-10-Путешествия-по-России.md
@@ -5,18 +5,13 @@ link-to-site: https://alexeynewdeveloper.github.io/gh-pages-russian-travel/index
 link-to-repo: https://github.com/AlexeyNewDeveloper/russian-travel
 ---
 
-Давно выяснено, что при оценке дизайна и композиции читаемый текст
-мешает сосредоточиться. Lorem Ipsum используют потому, что тот
-обеспечивает более или менее стандартное заполнение шаблона, а
-также реальное распределение букв и пробелов в абзацах, которое не
-получается при простой дубликации "Здесь ваш текст.. Здесь ваш
+Целью было создать сайт, где будет рассказываться об уникальных и красивых местах России, куда можно съездить, отдохнуть и полюбоваться природой. Сайт о путешествиях.
 
-Давно выяснено, что при оценке дизайна и композиции читаемый текст
-мешает сосредоточиться. Lorem Ipsum используют потому, что тот
-обеспечивает более или менее стандартное заполнение шаблона, а
-также реальное распределение букв и пробелов в абзацах, которое не
-получается при простой дубликации "Здесь ваш текст.. Здесь ваш
-текст.. Здесь ваш текст.." Многие программы электронной вёрстки и
-редакторы HTML используют Lorem Ipsum в качестве текста по
-умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу
-показывает
+В проекте использованы технологии:
+
+1. HTML
+2. CSS
+3. BEM
+4. Git
+
+Сайт с адаптивной версткой, который можно просматривать начиная от мобильных устройств и заканчивая ПК. Предоставление информации пользователям о красивых местах с удобной подачей материала.
