--- a/_projects/0001-10-10-Научиться-учиться.md
+++ b/_projects/0001-10-10-Научиться-учиться.md
@@ -5,7 +5,24 @@ link-to-site: https://alexeynewdeveloper.github.io/gh-pages-how_to_learn/index.h
 link-to-repo: https://github.com/AlexeyNewDeveloper/gh-pages-how_to_learn/tree/main
 ---
 
-Лендинг, который содержит информацию о том как правильно обучатся.
+"Научиться Учиться" — это образовательный лендинг, разработанный для того, чтобы помочь людям эффективнее осваивать новые навыки. Проект включает в себя обзор различных методов обучения и техники запоминания информации, что делает его полезным для студентов, профессионалов и всех, кто стремится к личностному росту.
+
+Основная цель сайта — предоставить пользователям ценные ресурсы для развития своих учебных навыков. В проекте представлена информация о различных стратегиях улучшения памяти, подходах к структурированному обучению и важности мотивации. На сайте также размещены вдохновляющие видео с канала TED, которые поддерживают интерес к теме и предоставляют дополнительные идеи для саморазвития.
+
+Функциональность:
+
+1. Интерактивные элементы: Структурированные разделы с инфографикой и карточками техник запоминания для удобного восприятия информации.
+2. Видеоинтеграция: Прямое подключение к видеоконтенту с YouTube, позволяющее пользователям получать полезные и вдохновляющие материалы без необходимости покидать сайт.
+3. Мотивационные секции: Разделы, стимулирующие пользователей начать применять представленные техники на практике.
+
+Технологии:
+
+- Frontend: HTML, CSS
+- API: Интеграция с YouTube API для динамической загрузки видеоконтента
+
+Проект демонстрирует мои навыки в создании пользовательски ориентированных интерфейсов, работе с API и реализации функциональных, кроссплатформенных решений.
+
+<!-- Лендинг, который содержит информацию о том как правильно обучатся.
 Различные техники запоминания, а также заряд мотивации и несколько видео с youtube канала Ted.
 
 В проекте использованы технологии:
@@ -15,4 +32,4 @@ link-to-repo: https://github.com/AlexeyNewDeveloper/gh-pages-how_to_learn/tree/m
 
 Старался все делать в рамках BEM.
 Сайт представляет собой лендинг, который содержит информацию о том, как лучше учится, какие техники использовать для запоминания.
-Также есть два встроенных видео с youtube-канала TED.
+Также есть два встроенных видео с youtube-канала TED. -->
